--- a/c++/rxd/Makefile
+++ b/c++/rxd/Makefile
@@ -1,19 +1,23 @@
 SRC_DIR = src
-CC = g++
+CC = g++-11
 SRC_FILES = $(wildcard $(SRC_DIR)/*.cpp)
 OBJ_NAME = main
 INCLUDE_PATHS = -Iinclude
-LIBRARY_PATHS = -Llib
-COMPILER_FLAGS = -std=c++2a -Wall
-LINKER_FLAGS = -lsdl2
+LIBRARY_PATHS = -Llib/SDL2 -Llib/SDL2_image
+COMPILER_FLAGS = -std=c++2a -Wall -Wno-unknown-pragmas
+LINKER_FLAGS = -lsdl2 -lsdl2_image
 
 build:
-	$(CC) $(COMPILER_FLAGS) $(LINKER_FLAGS) $(INCLUDE_PATHS) $(LIBRARY_PATHS) $(SRC_FILES) -o $(BUILD_DIR)/$(OBJ_NAME)
+	$(CC) $(COMPILER_FLAGS) $(LINKER_FLAGS) $(INCLUDE_PATHS) $(LIBRARY_PATHS) $(SRC_FILES) -o build/$(BUILD_NAME)/$(OBJ_NAME)
+
+build-debug:
+	$(MAKE) build BUILD_NAME=debug
+
+build-release:
+	$(MAKE) build BUILD_NAME=debug
 
 debug:
-	$(MAKE) build BUILD_DIR=build/debug
 	./build/debug/$(OBJ_NAME)
 
 release:
-	$(MAKE) build BUILD_DIR=build/release
 	./build/release/$(OBJ_NAME)
